--- a/kontakt.htm
+++ b/kontakt.htm
@@ -792,7 +792,7 @@ html[xmlns] .flexslider .slides {
         
         <nav class="primary">
             <ul>
-                <li><a href="/index.html">Start</a></li>
+                <li><a href="/index.htm">Start</a></li>
                 
                 <li><a href="/ueber.htm">Über mich</a></li>
                 <li></li>
