--- a/dienstleistungen.htm
+++ b/dienstleistungen.htm
@@ -805,7 +805,7 @@ html[xmlns] .flexslider .slides {
         
         <nav class="primary">
             <ul>
-                <li><a href="/index.html">Start</a></li>
+                <li><a href="/index.htm">Start</a></li>
                 <li></li>
                 <li><a href="/ueber.htm">Über mich</a><a href="http://www.bridgearchitects.com/portfolio/0100-the-old-schoolhouse.html"></a></li>
                 
