--- a/kontakt.htm
+++ b/kontakt.htm
@@ -810,7 +810,7 @@ html[xmlns] .flexslider .slides {
               Mittelstr. 11 <br>
               70180 Stuttgart<br>
               Deutschland<br>
-              e: <a href="mailto:info@buero-erb.info">info@buero-erb.info</a><br>
+              e: <a href="mailto:info@buero-erb.online">info@buero-erb.online</a><br>
             t: 0711-71530253<br>
             
             f: 0711-71530254<br>
